Start deployment on GitHub pages
Rename project name

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,29 +3,29 @@
     <div class="footer-cols">
         
         <ul>
-            <li><a href="">FAQ</a></li>
-            <li><a href="">Investor Relations</a></li>
-            <li><a href="">Ways To Watch</a></li>
-            <li><a href="">Corporate Information</a></li>
-            <li><a href="">Netflix Originals</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Investor Relations</a></li>
+            <li><a href="#">Ways To Watch</a></li>
+            <li><a href="#">Corporate Information</a></li>
+            <li><a href="#">Netflix Originals</a></li>
         </ul>
         <ul>
-            <li><a href="">Help Center</a></li>
-            <li><a href="">Jobs</a></li>
-            <li><a href="">Terms Of Use</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Terms Of Use</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
         <ul>
-            <li><a href="">Account</a></li>
-            <li><a href="">Redeem Gift Cards</a></li>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Speed Test</a></li>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">Redeem Gift Cards</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Speed Test</a></li>
         </ul>
         <ul>
-            <li><a href="">Media Center</a></li>
-            <li><a href="">Buy Gift Cards</a></li>
-            <li><a href="">Cookie Preferences</a></li>
-            <li><a href="">Legal Notices</a></li>
+            <li><a href="#">Media Center</a></li>
+            <li><a href="#">Buy Gift Cards</a></li>
+            <li><a href="#">Cookie Preferences</a></li>
+            <li><a href="#">Legal Notices</a></li>
         </ul>
         
     </div>
