--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar">
-        <a href="" class="navbar-brand">
-            <img class="netflix-logo" src="/assets/images/netflix-logo.png" alt="">
+        <a routerLink="" class="navbar-brand">
+            <img class="netflix-logo" src="assets/images/netflix-logo.png" alt="">
         </a>
         <div class="navbar-menu">
             <a class="navbar-item" routerLink="">Home</a>
@@ -9,12 +9,12 @@
             <a class="navbar-item" routerLink="movies">Movies</a>
         </div>
         
-        <a class="btn btn-rect navbar-get-started" routerLink="get-started">Get started</a>
+        <a class="btn btn-rect navbar-get-started" href="#">Get started</a>
 
-        <a class="navbar-right-item" href=""><mat-icon>search</mat-icon></a>
-        <a class="navbar-right-item" href="">Enfants</a>
-        <a class="navbar-right-item" href=""><mat-icon>card_giftcard</mat-icon></a>
-        <a class="navbar-right-item" href=""><mat-icon>notifications</mat-icon></a>
-        <img src="assets/images/jojo.jpg" alt="avatar" />
+        <a class="navbar-right-item" href="#"><mat-icon>search</mat-icon></a>
+        <a class="navbar-right-item" href="#">Enfants</a>
+        <a class="navbar-right-item" href="#"><mat-icon>card_giftcard</mat-icon></a>
+        <a class="navbar-right-item" href="#"><mat-icon>notifications</mat-icon></a>
+        <img class="navbar-profile-pic" src="assets/images/profile-pic.jpg" alt="avatar" />
     </nav>
 </header>
