Use leading / inside routerLink to navigate to absolute route

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,12 @@
 <header>
     <nav class="navbar">
-        <a routerLink="" class="navbar-brand">
+        <a routerLink="/" class="navbar-brand">
             <img class="netflix-logo" src="assets/images/netflix-logo.png" alt="">
         </a>
         <div class="navbar-menu">
-            <a class="navbar-item" routerLink="">Home</a>
-            <a class="navbar-item" routerLink="tv-shows">TV Shows</a>
-            <a class="navbar-item" routerLink="movies">Movies</a>
+            <a class="navbar-item" routerLink="/">Home</a>
+            <a class="navbar-item" routerLink="/tv-shows">TV Shows</a>
+            <a class="navbar-item" routerLink="/movies">Movies</a>
         </div>
         
         <a class="btn btn-rect navbar-get-started" href="#">Get started</a>
