Profile pic redirect to GitHub profile
Remove "Get Started" button

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,12 +9,12 @@
             <a class="navbar-item" routerLink="/movies">Movies</a>
         </div>
         
-        <a class="btn btn-rect navbar-get-started" href="#">Get started</a>
-
         <a class="navbar-right-item" href="#"><mat-icon>search</mat-icon></a>
         <a class="navbar-right-item" href="#">Enfants</a>
         <a class="navbar-right-item" href="#"><mat-icon>card_giftcard</mat-icon></a>
         <a class="navbar-right-item" href="#"><mat-icon>notifications</mat-icon></a>
-        <img class="navbar-profile-pic" src="assets/images/profile-pic.jpg" alt="avatar" />
+        <a href="https://github.com/stantanasi">
+            <img class="navbar-profile-pic" src="assets/images/profile-pic.jpg" alt="avatar" />
+        </a>
     </nav>
 </header>
